# CG2024

Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.ppm
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/assets/: CMakeCache.txt  Makefile  Schungus  assets  cmake_install.cmake  compile_commands.json
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/build_debug/: CMakeCache.txt  Makefile  Schungus  cmake_install.cmake  compile_commands.json  output.ppm
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/boople/: Camera.cpp  Camera.h  Light.cpp  Light.h
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/libs/sdw/: Colour.cpp  Colour.h  ModelTriangle.cpp  ModelTriangle.h  TexturePoint.cpp  TexturePoint.h
Weekly Workbooks/01 Introduction and Orientation/extras/RedNoise/src/: RedNoise.cpp  Schungus.cpp
